--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -2,11 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kaku.weac"
     android:versionCode="1"
-    android:versionName="1.0" >
-
-    <uses-sdk
-        android:minSdkVersion="16"
-        android:targetSdkVersion="21" />
+    android:versionName="1.0">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -19,11 +15,11 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name">
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.SET_ALARM" />
 
@@ -34,62 +30,49 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.ThemeActivity" >
-        </activity>
+        <activity android:name=".activities.ThemeActivity" />
         <activity
             android:name=".activities.AlarmClockNewActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Transparent" >
-        </activity>
+            android:theme="@style/Transparent" />
         <activity
             android:name=".activities.AlarmClockEditActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Transparent" >
-        </activity>
+            android:theme="@style/Transparent" />
         <activity
             android:name=".activities.RingSelectActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Transparent" >
-        </activity>
+            android:theme="@style/Transparent" />
         <activity
             android:name=".activities.AlarmClockOntimeActivity"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Wallpaper.NoTitleBar" >
-        </activity>
+            android:theme="@android:style/Theme.Wallpaper.NoTitleBar" />
         <activity
             android:name=".activities.AlarmClockNapNotificationActivity"
-            android:theme="@android:style/Theme.NoDisplay" >
-        </activity>
+            android:theme="@android:style/Theme.NoDisplay" />
         <activity
             android:name=".activities.NapEditActivity"
-            android:theme="@style/Theme.MyDialog" >
-        </activity>
+            android:theme="@style/Theme.MyDialog" />
         <activity
             android:name=".activities.RecordOperateActivity"
-            android:theme="@style/Theme.MyDialog" >
-        </activity>
+            android:theme="@style/Theme.MyDialog" />
         <activity
             android:name=".activities.RecordDetailActivity"
-            android:theme="@style/Theme.MyDialog" >
-        </activity>
+            android:theme="@style/Theme.MyDialog" />
         <activity
             android:name=".activities.RecordRenameActivity"
-            android:theme="@style/Theme.MyDialog" >
-        </activity>
+            android:theme="@style/Theme.MyDialog" />
         <activity
             android:name=".activities.RecordDeleteActivity"
-            android:theme="@style/Theme.MyDialog" >
-        </activity>
+            android:theme="@style/Theme.MyDialog" />
         <activity
             android:name=".activities.RecordDeleteBatchActivity"
-            android:theme="@style/Transparent" >
-        </activity>
+            android:theme="@style/Transparent" />
 
         <receiver
             android:name=".broadcast.AlarmClockBroadcast"
-            android:process=":remote" >
-        </receiver>
-        <receiver android:name=".broadcast.BootBroadcastReceiver" >
+            android:process=":remote" />
+        <receiver android:name=".broadcast.BootBroadcastReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
@@ -98,13 +81,12 @@
         <provider
             android:name=".db.AlarmClockProvider"
             android:authorities="com.kaku.weac"
-            android:exported="false" >
-        </provider>
+            android:exported="false" />
 
         <service
             android:name=".service.GuardMasterService"
-            android:exported="false" >
-            <intent-filter android:priority="1000" >
+            android:exported="false">
+            <intent-filter android:priority="1000">
                 <action android:name="com.kaku.GuardMasterService" />
             </intent-filter>
         </service>
