--- a/workspace/PagerSlidingTabStrip/src/main/AndroidManifest.xml
+++ b/workspace/PagerSlidingTabStrip/src/main/AndroidManifest.xml
@@ -1,8 +1,3 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.astuetz.pagerslidingtabstrip" >
-
-    <application>
-        <uses-sdk android:minSdkVersion="16" />
-    </application>
+<manifest package="com.astuetz.pagerslidingtabstrip">
 
 </manifest>
