--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -21,4 +21,5 @@ android {
 dependencies {
     compile project(':PagerSlidingTabStrip')
     compile 'com.android.support:support-v4:23.0.0'
+    compile files('D:/AndroidStudioProjects/workspace/libs/hellocharts-library-1.5.7.jar')
 }
