--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -20,5 +20,6 @@ android {
 
 dependencies {
     compile project(':PagerSlidingTabStrip')
+    compile project(':PullToRefresh')
     compile 'com.android.support:support-v4:23.0.0'
 }
