test auto update

--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -95,10 +95,15 @@
                 <action android:name="com.kaku.GuardMasterService"/>
             </intent-filter>
         </service>
+
         <service
-            android:name=".service.AutoUpdateService"
+            android:name=".test.AutoUpdateService"
             android:exported="false">
         </service>
+
+        <receiver
+            android:name=".test.AutoUpdateReceiver"
+            android:process=":test"/>
     </application>
 
 </manifest>
