--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     compile project(':PagerSlidingTabStrip')
     compile project(':PullToRefresh')
     compile 'com.android.support:support-v4:23.0.0'
+    compile files('libs/litepal-1.3.0.jar')
 }
