--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
     <application
+        android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name">
@@ -75,6 +76,9 @@
             android:theme="@style/Transparent"/>
         <activity
             android:name=".activities.CityManageActivity"
+            android:theme="@style/Transparent"/>
+        <activity
+            android:name=".activities.AddCityActivity"
             android:theme="@style/Transparent"/>
 
         <receiver
