--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -22,8 +22,7 @@
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.SET_ALARM"/>
 
@@ -71,15 +70,18 @@
             android:theme="@style/Theme.MyDialog"/>
         <activity
             android:name=".activities.LifeIndexDetailActivity"
+            android:launchMode="singleTop"
             android:theme="@style/Theme.MyDialog"/>
         <activity
             android:name=".activities.RecordDeleteBatchActivity"
             android:theme="@style/Transparent"/>
         <activity
             android:name=".activities.CityManageActivity"
+            android:launchMode="singleTop"
             android:theme="@style/Transparent"/>
         <activity
             android:name=".activities.AddCityActivity"
+            android:launchMode="singleTop"
             android:theme="@style/Transparent"/>
 
         <receiver
