location release3(baidu location)

--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -10,10 +10,19 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <!-- 以下为百度定位需要权限-->
     <!-- 这个权限用于进行网络定位-->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <!-- 这个权限用于访问GPS定位-->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <!-- 获取运营商信息，用于支持提供运营商信息相关的接口-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <!-- 用于读取手机当前的状态-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
 
     <!-- 操作SD卡 -->
@@ -76,6 +85,9 @@
             android:name=".activities.RecordDeleteActivity"
             android:theme="@style/Theme.MyDialog"/>
         <activity
+            android:name=".activities.MyDialogActivity"
+            android:theme="@style/Theme.MyDialog"/>
+        <activity
             android:name=".activities.LifeIndexDetailActivity"
             android:launchMode="singleTop"
             android:theme="@style/Theme.MyDialog"/>
@@ -117,6 +129,16 @@
             android:name=".test.AutoUpdateService"
             android:exported="false">
         </service>
+
+        <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":location">
+        </service>
+
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="ObExIXC7RqG2ZXf0Ys2q0ttv"/>
 
         <receiver
             android:name=".test.AutoUpdateReceiver"
