--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -27,4 +27,7 @@ dependencies {
     compile files('libs/litepal-1.3.0.jar')
     compile 'com.squareup.okhttp:okhttp:2.6.0'
     compile 'com.squareup.okio:okio:1.6.0'
+    compile files('libs/BaiduLBS_Android.jar')
+    compile files('libs/locSDK_4.0.jar')
+    compile files('libs/locSDK_6.13.jar')
 }
