--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -103,7 +103,8 @@
             android:theme="@style/Transparent"/>
         <activity
             android:name=".activities.AddCityActivity"
-            android:theme="@style/Transparent"/>
+            android:theme="@style/Transparent"
+            android:windowSoftInputMode="adjustUnspecified|stateHidden"/>
 
         <receiver
             android:name=".broadcast.AlarmClockBroadcast"
