--- a/workspace/local.properties
+++ b/workspace/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 20 19:06:45 CST 2015
+#Fri Dec 25 23:46:31 CST 2015
+ndk.dir=D\:\\ProgramFiles\\android-ndk-r10b
 sdk.dir=D\:\\AppData\\Local\\Android\\sdk
