--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -95,6 +95,9 @@
             android:launchMode="singleTop"
             android:theme="@style/Theme.MyDialog"/>
         <activity
+            android:name=".activities.TimerOnTimeActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+        <activity
             android:name=".activities.RecordDeleteBatchActivity"
             android:theme="@style/Transparent"/>
         <activity
