--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -23,10 +23,12 @@ dependencies {
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
     compile project(':PagerSlidingTabStrip')
     compile project(':PullToRefresh')
-    compile 'com.android.support:support-v4:23.0.0'
     compile files('libs/litepal-1.3.0.jar')
-    compile 'com.squareup.okhttp:okhttp:2.6.0'
-    compile 'com.squareup.okio:okio:1.6.0'
     compile files('libs/locSDK_6.13.jar')
     compile project(':daemon')
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.squareup.okhttp:okhttp:2.6.0'
+    compile 'com.squareup.okio:okio:1.6.0'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile project(':UniversalImageLoader')
 }
