--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.squareup.okio:okio:1.6.0'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile project(':UniversalImageLoader')
+    compile 'com.squareup:otto:1.3.8'
 }
