--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile project(':zxing')
 }
