--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <!-- 扫描二维码 -->
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:name=".LeakCanaryApplication"
@@ -121,6 +123,10 @@
             android:name=".activities.LocalAlbumDetailActivity"
             android:launchMode="singleTop"
             android:theme="@style/Transparent"/>
+
+        <activity
+            android:name=".zxing.activity.CaptureActivity"
+            android:screenOrientation="portrait"/>
 
         <receiver
             android:name=".broadcast.AlarmClockBroadcast"
