--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -123,10 +123,14 @@
             android:name=".activities.LocalAlbumDetailActivity"
             android:launchMode="singleTop"
             android:theme="@style/Transparent"/>
-
         <activity
             android:name=".zxing.activity.CaptureActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/Transparent"/>
+        <activity
+            android:name=".activities.DisplayScanResultActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Transparent"/>
 
         <receiver
             android:name=".broadcast.AlarmClockBroadcast"
@@ -165,7 +169,6 @@
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="ObExIXC7RqG2ZXf0Ys2q0ttv"/>
-
         <meta-data
             android:name="com.kaku.weac.util.GlideConfiguration"
             android:value="GlideModule"/>
@@ -173,7 +176,6 @@
         <receiver
             android:name=".test.AutoUpdateReceiver"
             android:process=":test"/>
-
     </application>
 
 </manifest>
