--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
     <!-- 扫描二维码 -->
     <uses-permission android:name="android.permission.CAMERA"/>
+    <!--开启闪光灯-->
+    <uses-feature android:name="android.hardware.camera"/>
+    <!--<uses-feature android:name="android.hardware.autofocus" />-->
+    <!--<uses-permission android:name="android.permission.FLASHLIGHT"/>-->
+    <!--<uses-permission android:name="android.permission.DISABLE_KEYGUARD" />-->
 
     <application
         android:name=".LeakCanaryApplication"
