--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -32,9 +32,8 @@
     <uses-permission android:name="android.permission.CAMERA"/>
     <!--开启闪光灯-->
     <uses-feature android:name="android.hardware.camera"/>
-    <!--<uses-feature android:name="android.hardware.autofocus" />-->
-    <!--<uses-permission android:name="android.permission.FLASHLIGHT"/>-->
-    <!--<uses-permission android:name="android.permission.DISABLE_KEYGUARD" />-->
+    <uses-feature android:name="android.hardware.autofocus"/>
+    <uses-permission android:name="android.permission.FLASHLIGHT"/>
 
     <application
         android:name=".LeakCanaryApplication"
