--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -17,11 +17,11 @@ android {
         }
     }
 
-    sourceSets {
+/*    sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
         }
-    }
+    }*/
 
 }
 
