--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile files('libs/zxing-4.7.3.jar')
     compile files('libs/universal-image-loader-1.9.5.jar')
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
+    compile 'com.android.support:design:23.1.1'
 }
