--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     compile files('libs/universal-image-loader-1.9.5.jar')
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
     compile 'com.android.support:design:23.1.1'
+    compile 'me.imid.swipebacklayout.lib:library:1.0.0'
 }
