--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
     compile 'com.android.support:design:23.1.1'
     compile 'me.imid.swipebacklayout.lib:library:1.0.0'
+    compile 'me.itangqi.waveloadingview:library:0.1.5'
 }
