--- a/workspace/settings.gradle
+++ b/workspace/settings.gradle
@@ -1,3 +1,3 @@
-include ':PagerSlidingTabStrip', ':daemon', ':CircleProgress'
+include ':PagerSlidingTabStrip', ':daemon', ':ColorPickerPreference'
 include ':WeAC'
 include ':PullToRefresh'
