--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -50,4 +50,5 @@ dependencies {
         transitive = true
     }
     compile project(':SwipeBackLayout')
+    compile project(':overscroll-decor')
 }
