--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -156,10 +156,18 @@
             </intent-filter>
         </receiver>
 
-        <provider
-            android:name=".db.AlarmClockProvider"
-            android:authorities="com.kaku.weac"
-            android:exported="false"/>
+        <!--        <provider
+                    android:name=".db.AlarmClockProvider"
+                    android:authorities="com.kaku.weac"
+                    android:exported="false"/>-->
+
+        <receiver
+            android:name=".broadcast.AlarmClockProcessReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.kaku.weac.AlarmClockOff"/>
+            </intent-filter>
+        </receiver>
 
         <service
             android:name=".service.NotificationCenter"
