--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     }
     compile project(':SwipeBackLayout')
     compile project(':overscroll-decor')
+    compile 'jp.wasabeef:recyclerview-animators:2.2.0'
 }
