--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -25,6 +25,10 @@ android {
 
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
@@ -50,7 +54,8 @@ dependencies {
         transitive = true
     }
     compile project(':SwipeBackLayout')
-    compile project(':overscroll-decor')
     compile 'jp.wasabeef:recyclerview-animators:2.2.0'
     compile 'com.balysv:material-ripple:1.0.2'
+    compile 'com.makeramen:roundedimageview:2.2.1'
+    compile project(':overscroll-decor')
 }
