--- a/workspace/overscroll-decor/build.gradle
+++ b/workspace/overscroll-decor/build.gradle
@@ -20,7 +20,8 @@ android {
 
 dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.1'
+
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:1.9.5'
-    testCompile 'org.robolectric:robolectric:3.0'
+    testCompile "org.mockito:mockito-core:1.9.5"
+    testCompile "org.robolectric:robolectric:3.0"
 }
