--- a/workspace/build.gradle
+++ b/workspace/build.gradle
@@ -12,5 +12,6 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
+        maven { url "https://raw.githubusercontent.com/umeng/mvn-repo-umeng/master/repository" }
     }
 }
