--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -147,6 +147,10 @@
             android:windowSoftInputMode="adjustUnspecified|stateHidden">
         </activity>
 
+        <activity
+            android:name=".activities.FeedbackActivity"
+            android:theme="@style/Transparent.Light"/>
+
         <receiver
             android:name=".broadcast.AlarmClockBroadcast"
             android:process=":remote"/>
@@ -185,13 +189,28 @@
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="ObExIXC7RqG2ZXf0Ys2q0ttv"/>
+
         <meta-data
             android:name="com.kaku.weac.util.GlideConfiguration"
             android:value="GlideModule"/>
 
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="56c1ca2167e58ec5d600086f"/>
+        <meta-data
+            android:name="UMENG_CHANNEL"
+            android:value="Umeng"/>
+        <!--        <meta-data
+                    android:name="UMENG_CHANNEL"
+                    android:value="${CHANNEL_VALUE}"/>-->
+
         <receiver
             android:name=".test.AutoUpdateReceiver"
             android:process=":test"/>
+
+        <!--        <activity
+        android:name="com.umeng.fb.ConversationActivity"
+        android:theme="@style/Transparent.Light"/>-->
     </application>
 
 </manifest>
