--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.kaku.weac"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:versionCode="1"
-    android:versionName="1.0">
+    android:versionName="@string/version">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
@@ -30,12 +30,11 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
     <!-- 扫描二维码 -->
     <uses-permission android:name="android.permission.CAMERA"/>
-    <!--开启闪光灯-->
+    <!-- 开启闪光灯 -->
     <uses-feature android:name="android.hardware.camera"/>
     <uses-feature android:name="android.hardware.autofocus"/>
 
     <uses-permission android:name="android.permission.FLASHLIGHT"/>
-
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
 
     <application
@@ -140,15 +139,15 @@
         <activity
             android:name=".activities.DisplayScanResultActivity"
             android:theme="@style/Transparent.Light"/>
-
         <activity
             android:name=".activities.GenerateCodeActivity"
             android:theme="@style/Transparent.Light"
-            android:windowSoftInputMode="adjustUnspecified|stateHidden">
-        </activity>
-
+            android:windowSoftInputMode="adjustUnspecified|stateHidden"/>
         <activity
             android:name=".activities.FeedbackActivity"
+            android:theme="@style/Transparent.Light"/>
+        <activity
+            android:name=".activities.AboutActivity"
             android:theme="@style/Transparent.Light"/>
 
         <receiver
@@ -159,7 +158,6 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
-
         <receiver android:name=".broadcast.AlarmClockProcessReceiver">
             <intent-filter>
                 <action android:name="com.kaku.weac.AlarmClockOff"/>
@@ -189,28 +187,30 @@
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="ObExIXC7RqG2ZXf0Ys2q0ttv"/>
-
         <meta-data
             android:name="com.kaku.weac.util.GlideConfiguration"
             android:value="GlideModule"/>
-
         <meta-data
             android:name="UMENG_APPKEY"
             android:value="56c1ca2167e58ec5d600086f"/>
         <meta-data
             android:name="UMENG_CHANNEL"
             android:value="Umeng"/>
-        <!--        <meta-data
+        <!--
+                    <meta-data
                     android:name="UMENG_CHANNEL"
-                    android:value="${CHANNEL_VALUE}"/>-->
+                    android:value="${CHANNEL_VALUE}"/>
+        -->
 
         <receiver
             android:name=".test.AutoUpdateReceiver"
             android:process=":test"/>
 
-        <!--        <activity
+        <!--
+        <activity
         android:name="com.umeng.fb.ConversationActivity"
-        android:theme="@style/Transparent.Light"/>-->
+        android:theme="@style/Transparent.Light"/>
+        -->
     </application>
 
 </manifest>
