添加关于界面灵芝体，添加友盟统计sdk

--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -74,4 +74,5 @@ dependencies {
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile project(':overscroll-decor')
     compile 'com.umeng:fb:5.4.0'
+    compile 'com.umeng.analytics:analytics:latest.integration'
 }
