--- a/workspace/settings.gradle
+++ b/workspace/settings.gradle
@@ -1,3 +1,3 @@
-include ':PagerSlidingTabStrip', ':daemon', ':SwipeBackLayout', ':overscroll-decor'
+include ':PagerSlidingTabStrip', ':daemon', ':SwipeBackLayout'
 include ':WeAC'
 include ':PullToRefresh'
