--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -43,8 +43,17 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name">
         <activity
+            android:name=".activities.SplashActivity"
+            android:excludeFromRecents="false"
+            android:noHistory="true"
+            android:theme="@style/Transparent.Light">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".activities.MainActivity"
-            android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
@@ -52,9 +61,6 @@
 
                 <category android:name="android.intent.category.DEFAULT"/>
 
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
@@ -225,6 +231,7 @@
             android:name="com.umeng.update.UpdateDialogActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar">
         </activity>
+
     </application>
 
 </manifest>
