--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -14,7 +14,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            debuggable false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
