天气闹钟主界面Fragment添加加载，修复天气增加到14天的bug和其他一些配置变化

--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -20,6 +20,13 @@ android {
         }
     }
 
+// gradle bug 去掉release编译警告
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude '.readme'
+    }
+
 /*    productFlavors {
         wandoujia {}
         baidu {}
