--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -16,8 +16,8 @@ android {
 
     buildTypes {
         debug {
-            minifyEnabled true
-            zipAlignEnabled true
+            minifyEnabled false
+            zipAlignEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
@@ -83,7 +83,7 @@ dependencies {
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
     compile project(':PagerSlidingTabStrip')
     compile project(':PullToRefresh')
-    compile files('libs/litepal-1.3.0.jar')
+    compile 'org.litepal.android:core:1.3.1'
     compile files('libs/locSDK_6.13.jar')
     compile project(':daemon')
     compile 'com.android.support:support-v4:23.1.1'
