铃声向右箭头

--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -16,8 +16,8 @@ android {
 
     buildTypes {
         debug {
-            minifyEnabled false
-            zipAlignEnabled false
+            minifyEnabled true
+            zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
