--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -16,8 +16,8 @@ android {
 
     buildTypes {
         debug {
-            minifyEnabled true
-            zipAlignEnabled true
+            minifyEnabled false
+            zipAlignEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
