--- a/workspace/WeAC/build.gradle
+++ b/workspace/WeAC/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
-        versionName "@string/version"
+        versionName "1.0"
 
 //        manifestPlaceholders = [ UMENG_CHANNEL_VALUE:"wandoujia" ]
     }
