--- a/workspace/WeAC/src/main/AndroidManifest.xml
+++ b/workspace/WeAC/src/main/AndroidManifest.xml
@@ -165,7 +165,9 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
-        <receiver android:name=".broadcast.AlarmClockProcessReceiver">
+        <receiver
+            android:name=".broadcast.AlarmClockProcessReceiver"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.kaku.weac.AlarmClockOff"/>
             </intent-filter>
